# rr-bench

./: Cargo.toml  README.md  SPECIFICATION.md
.github/workflows/: main.yml
rr-bench-base/: Cargo.toml  README.md
rr-bench-base/src/: config.rs  lib.rs  operations.rs  pretty_duration.rs  primary_simulator.rs  read_simulator.rs  task_handle.rs
rr-bench-core/: Cargo.toml  README.md
rr-bench-core/src/: config.rs  lib.rs  measurements.rs  operations.rs  primary_simulator.rs  read_simulator.rs  task_handle.rs
rr-bench-postgres/: Cargo.toml  README.md  mz_views.sql  pg_ddl.sql  pg_load.sql  pg_views.sql
rr-bench-postgres/src/: main.rs
rr-bench-sqlite/: Cargo.toml  ddl.sql
rr-bench-sqlite/src/: main.rs
rr-data-gen/: Cargo.toml
rr-data-gen/src/: main.rs
